ecmascript/parser/tests/test262-error-references/fail/19699bcdea35eb46.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/19699bcdea35eb46.js:1:19
  |
1 | 'use strict'; ('\4')
  |                   ^^

